fix: glitch effect on firefox

--- a/assets/design/helpers.styl
+++ b/assets/design/helpers.styl
@@ -30,3 +30,6 @@ body.-do-splash ._fade-in
   display flex
   align-items center
   justify-content center
+
+._inline-block
+  display inline-block
